# verdant

./: .gitignore  README.md  deploy.sh  deploy_offsets.mjs  pyproject.toml  seed_projects.mjs  sitecustomize.py
contracts/: verdant_footprint.py  verdant_offsets.py
frontend/: next.d.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/rpc/: route.ts
frontend/app/calculate/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/offsets/: page.tsx
frontend/components/: Icons.tsx  Logo.tsx  Nav.tsx  PrivyProviderWrapper.tsx  WalletBar.tsx  WalletGate.tsx  WalletProvider.tsx
frontend/hooks/: useWallet.ts
frontend/lib/: constants.ts  genlayer.ts
tests/: conftest.py  test_footprint.py  test_offsets.py
