[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verdant-contracts"
version = "0.1.0"
description = "Verdant — personal carbon footprint, actually verified. GenLayer intelligent contracts."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0"
]

[tool.ruff]
line-length = 88
target-version = "py310"
lint.select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
lint.ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"contracts/*.py" = ["F403", "F405", "W291", "W293"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
